@@ -1,0 +1,4 @@
+package gizz.tapes.data
+
+// data class instead of value class for dagger usage
+data class PlayerErrorMessage(val value: String)
