@@ -1,3 +1,0 @@
-package gizz.tapes.ui
-
-data class ApiErrorMessage(val value: String)
