@@ -7,7 +7,6 @@ import gizz.tapes.data.ShowId
 import gizz.tapes.data.Title
 
 val Long.formatedElapsedTime: String get() = DateUtils.formatElapsedTime(this / 1000L)
-val Player.formatedElapsedTime: String get() = DateUtils.formatElapsedTime(currentPosition / 1000L)
 val MediaItem?.title: String get() = this?.mediaMetadata?.title?.toString() ?: "--"
 
 /** Must be called on metadata with extras **/
